регистрация подпроцессов и др

--- a/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
@@ -124,7 +124,8 @@ body{
 }
 
 .Сompleted{
-   color: #C7C6C4 !important;
+   color: grey !important;
+   font-style: italic !important;
 }
 
 .Cancelled{
