--- a/escom-bpm-web/src/main/webapp/view/processes/process-list.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-list.xhtml
@@ -41,7 +41,7 @@
 
         <p:column headerText="#{bundle.Commands}" width="20" > 
             <p:commandButton icon="ico_look" title="#{bundle.Open}" actionListener="#{processBean.prepEditItem(proc)}" > 
-                <p:ajax event="dialogReturn" update="tblProcess"/>
+                <p:ajax event="dialogReturn" listener="#{_bean.onUpdateProcesses()}" update="tblProcess"/>
             </p:commandButton>
         </p:column>
     </p:dataTable>        
